--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -15,6 +15,38 @@
   width: auto;
   height: 50%;
 }
+.comment {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  overflow: hidden;
+  padding: 2em;
+  box-sizing: content-box;
+  background-color: beige;
+}
+.comment-instructions {
+  font-size: 1.75em;
+}
+.comment-input {
+  font-size: 1rem;
+  width: 95%;
+}
+.comment-button {
+  display: block;
+  padding: 0.25em 0.5em;
+  margin: 1em 0;
+  font-size: 1.5rem;
+  height: 4rem;
+  outline: none;
+  border: 0.1em black solid;
+  cursor: pointer;
+}
+.comment-button:hover {
+  color: white;
+  background: black;
+}
 .hide {
   opacity: 0;
   pointer-events: none;
